-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
Tried with qt 5.2 beta 1 (and 11/1 snapshot). Crashes on Windows 8 and Android (at least)
-
2b8dd863601cffbe04fa510395a19318e2fcca24
When changing the currentIndex for a PathView from the first to the last item, if the opacity is .5, the application will crash with:
ASSERT: "m_nodes.contains(node)" in file scenegraph\coreapi\qsgbatchrenderer.cpp, line 1169
Note: I am almost sure the exact "same code" used to work on Qt 4.8
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-34520 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 70269,1 | Tolerate NaN in the geometry without asserting | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |